Site/webapp/wdkCustomization/css/client.css
/* ... */
.eupathdb-Thumbnail:hover img {
  width: 800px;
  left: -90px;
}
*/

.eupathdb-DatasetGraphContainer {
  overflow: auto;
  position: relative;
  padding: 0 4px;
  min-height: 100px;
  display: flex;
  flex-wrap: wrap;
}

.eupathdb-DatasetGraphLoading {
  position: absolute;
  top: 1em;
  left: 1em;
}

.eupathdb-DatasetGraph {
  width: 500px;
  flex-grow: 1;
}

.eupathdb-DatasetGraphDetails {
  width: 50%;
  flex-grow: 1;
}

.eupathdb-DatasetGraphDescriptionHeader {
  margin: 0;
}

.wdk-RecordAttributeSectionItem.wdk-RecordAttributeSectionItem__fasta_transcript_sequence {
  width: 100%;
}

.wdk-RecordAttributeSectionItem.wdk-RecordAttributeSectionItem__fasta_transcript_sequence .wdk-RecordAttributeName {
  display: block;
}

.wdk-DataTableCellExpand {
  color: #777;
}


.wdk-RecordTable__ExpressionGraphs .wdk-DataTableCell__display_name {
  min-width: 18em;
}
.wdk-RecordTable__ExpressionGraphs .wdk-DataTableCell__summary {
  max-width: 35em;
}

.wdk-RecordTable__ProteinExpressionGraphs .wdk-DataTableCell__assay_type {
  white-space: nowrap;
}

.eupathdb-MercatorTable {
  padding: 0 1em;
  border: 1px solid lightgray;
  border-radius: 6px;
}

.eupathdb-MercatorTable .wdk-CheckboxList {
  padding: .4em;
}

.eupathdb-MercatorTable input[type="submit"] {
  margin: 1em 0;
}

/** record table cell overrides */

/** content in these cells should not wrap */
.wdk-DataTableCell__transcript_id,
.wdk-DataTableCell__transcript_ids,
.wdk-DataTableCell__Pvalue,
.wdk-DataTableCell__rmgmid_rodmal_link,
.wdk-DataTableCell__pubmed_link,
.wdk-DataTableCell__doi_link,
.wdk-DataTableCell__term_name {
  white-space: nowrap;
}


/** Dataset page */
.eupathdb-DatasetRecord {
  padding: 0 2em;
}

.eupathdb-DatasetRecord h2,
.eupathdb-DatasetRecord h3 {
  margin: 22px 0 11px;
  color: #333333;
  font-family: Arial, Helvetica, sans-serif;
}
.eupathdb-DatasetRecord-summary {
  font-size: 1.2em;
}
.eupathdb-DatasetRecord ul {
  line-height: 1.6;
  list-style: none;
  padding-left: 1em;
  margin: 0;
}
.eupathdb-DatasetRecord-title {
  color: black;
}
.eupathdb-DatasetRecord-headerTable tr th {
  white-space: nowrap;
  padding-right: 1em;
  vertical-align: top;
  text-align: right;
  border: none;
}

.eupathdb-DatasetRecord-GraphImg {
  width: 450px;
}

/*
@media (min-width: 1175px) {
  .eupathdb-DatasetRecord {
    padding: 0 20px;
    max-width: 1350px;
    margin: auto;
  }
  .eupathdb-DatasetRecord-Main {
    float: left;
    max-width: 700px;
  }
  .eupathdb-DatasetRecord-Sidebar {
    max-width: 375px;
    float: right;
    font-size: 95%;
    color: #333333;
  }
  .eupathdb-DatasetRecord-Sidebar ul {
    padding-left: 0;
  }
  .eupathdb-DatasetRecord-Sidebar table {
    width: 100%;
  }
}
*/

@media (min-width: 1150px) {
  .eupathdb-DatasetRecord-GraphMeta {
    width: 58%;
    float: right;
  }
  .eupathdb-DatasetRecord-GraphData {
    width: 450px;
  }
}
@media (min-width: 1300px) {
  .eupathdb-DatasetRecord-GraphMeta {
    width: 65%;
  }
}
.eupathdb-Beta-Announcement {
  float: right;
  font-style: italic;
  font-size: 1.2em;
  padding: 4px 0;
}

.eupathdb-TranscriptRecordNavigationSectionContainer h3 {
  padding-top: 18px;
}

.eupathdb-TranscriptRecordNavigationSectionContainer h3:first-child {
  padding-top: 10px;
}

.eupathdb-TranscriptListContainer {
  margin-bottom: 6px;
}

.eupathdb-TranscriptRecordNavList {
  list-style: none;
  padding: 0;
  margin: 0;
  font-weight: 300;
}

.eupathdb-TranscriptRecordNavList > li a {
  padding-left: 1em;
  position: relative;
  display: block;
}
.eupathdb-TranscriptRecordNavList > li a:hover,
.eupathdb-TranscriptRecordNavList > li a.active {
  font-weight: 400;
}
.eupathdb-TranscriptRecordNavList > li a:hover:before,
.eupathdb-TranscriptRecordNavList > li a.active:before {
  font-family: FontAwesome;
  opacity: 0.8;
  position: absolute;
  left: -2px;
  content: '\f178 ';
}
.eupathdb-TranscriptSticky {
  background: #fcfcfc;
  padding-top: 36px;
}
.eupathdb-TranscriptSticky-fixed {
  z-index: 1;
  border-color: #999;
  position: fixed;
  top: 0;
  width: calc(100vw - 362px);
}
#wdk-container .eupathdb-TranscriptHeading {
  float: left;
  margin: 0;
  padding: 0;
  padding-right: 1em;
  padding-top: .2em;
}
.eupathdb-TranscriptTabList {
  border-bottom: 1px solid #aaa;
}
.eupathdb-TranscriptTabList:before,
.eupathdb-TranscriptTabList:after {
  content: "";
  display: table;
  border-collapse: collapse;
}
.eupathdb-TranscriptTabList:after {
  clear: both;
}
.eupathdb-TranscriptLink {
  display: block;
  float: left;
  padding: .8em;
  font-size: 1.3em;
  font-weight: 400;
  border: 1px solid transparent;
  border-bottom: none;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  margin-right: 2px;
  margin-bottom: -1px;
}
.eupathdb-TranscriptLink:hover,
.eupathdb-TranscriptLink:focus {
  background-color: #ccc;
  z-index: 1;
}
.eupathdb-TranscriptLink-active,
.eupathdb-TranscriptLink-active:hover,
.eupathdb-TranscriptLink-active:focus {
  background-color: #fcfcfc;
  border-color: #aaa;
}
.eupathdb-TranscriptTabContent {
  border: 1px solid #aaa;
  border-top: none;
  padding: 2em;
}

.wdk-RecordSection__collapsed {
  display: none;
}

/* offset so things don't hide under menubar */
.wdk-RecordSection,
.wdk-RecordSubsection {
  padding-top: 32px;
  margin-top: -42px;
}

.wdk-RecordTableContainer,
.wdk-RecordAttributeSectionItem,
.eupathdb-GbrowseContext {
  padding-top: 32px;
  margin-top: -32px;
}

.eupathdb-UtrSequenceNucleotide {
  background-color: #cae4ff;
  text-transform: lowercase;
}

.eupathdb-IntronSequenceNucleotide {
  background-color: #dddddd;
  color: #333;;
  text-transform: lowercase;
}

.eupathdb-CompoundStructureWrapper {
  display: inline-block;
}

.eupathdb-OtherCompoundStructures {
  margin: 0 20px;
}

.ChemDoodleWebComponent {
  border: 1px solid #d8d8d8;
  margin: 4px;
}


.eupathdb-ReporterFormSubmit {
  text-align: center;
  width: 90vw;
  padding: 2em 0;
}
/* ... */

